Refactor API configuration and enhance chat functionality with improved context handling and strict response rules